--- a/src/views/component/zero/block-zero.pug
+++ b/src/views/component/zero/block-zero.pug
@@ -1,13 +1,13 @@
 .container-full
     .content-wrap.content-0
-        .container
-            .row.mb-0.bg
-                .col-lg-6.px-0
-                    .text-box.justify-content-start 
-                        h4.subtitle-secondary.px-3 When a solar company sold him rooftop panels for his house, they also sold him a battery. It’s been sitting in his basement for two years, not doing much.
-                        //- img.auto-size(src="/aemo-gradient-indis.png" alt="aemo gradient text")
-                .col-lg-6.px-0
-                    img(src="/battaries.png" alt="Battaries")
+        //- .container
+        //-     .row.mb-0.bg
+        //-         .col-lg-6.px-0
+        //-             .text-box.justify-content-start 
+        //-                 h4.subtitle-secondary.px-3 When a solar company sold him rooftop panels for his house, they also sold him a battery. It’s been sitting in his basement for two years, not doing much.
+        //-                 //- img.auto-size(src="/aemo-gradient-indis.png" alt="aemo gradient text")
+        //-         .col-lg-6.px-0
+        //-             img(src="/battaries.png" alt="Battaries")
         .container-full.row.mb-0.bg.gray.pt-0.mt-5.pb-5.mb-5
             .content-wrap.content-0
                 .container
@@ -15,8 +15,8 @@
                         .row    
                             .col-lg-6
                                 .text-box
-                                    h4.subtitle-secondary.mb-4  Now with Project EDGE, several utilities are using Mark’s solar PV system and battery to help balance the grid...
-                                    h3.body-text And they’re <u>Paying him</u> to do it!
+                                    h4.subtitle-secondary.mb-4 Under project EDGE, Mark’s assets can sell services to <br> utilities who manage the grid. <br> In exchange, he gets paid, generating
+                                    h3.body-text new revenues from <br> his battery and solar panels
                             .col-lg-6.px-0
                                 img(src="/block-1-house.svg" alt="house")
         .container
@@ -24,9 +24,7 @@
                 .row.mb-0.col-reversed
                     .col-lg-6
                         img(src="/hexagon.svg" alt="hexagon")
-                    .col-lg-6.mt-0.mt-lg-auto.px-0
+                    .col-lg-6.mt-0.px-0
                         .text-box.to-right.s-t-center
-                            h4.subtitle-secondary He’s also helping to
-                            h3.body-text <u>Decarbonize the grid</u>
-                            h4.subtitle-secondary.mt-2 and support a clean energy future.
-                            //--article.f-medium.h-42 because my battery is being used to balance the grid—not a fossil-fuel powered plant...
+                            h4.subtitle-secondary.mb-4.mx-4.mx-lg-0 Through Mark’s participation in Project EDGE, he and other Australians with similar systems are helping to balance a rapidly 
+                            h3.body-text.mb-4.mb-lg-0.mx-4.mx-lg-0 decarbonizing grid in support of a clean energy future
