--- a/src/views/component/zero/block-zero.pug
+++ b/src/views/component/zero/block-zero.pug
@@ -15,7 +15,7 @@
                         .row    
                             .col-lg-6
                                 .text-box
-                                    h4.subtitle-secondary.mb-4 Under project EDGE, Mark’s assets can sell services to <br> utilities who manage the grid. <br> In exchange, he gets paid, generating
+                                    h4.subtitle-secondary.mt-4.mb-4 Under project EDGE, Mark’s assets can sell services to <br> utilities who manage the grid. <br> In exchange, he gets paid, generating
                                     h3.body-text new revenues from <br> his battery and solar panels
                             .col-lg-6.px-0
                                 img(src="/block-1-house.svg" alt="house")
