--- a/src/views/pages/home.pug
+++ b/src/views/pages/home.pug
@@ -35,7 +35,7 @@ block App
             .swiper.slider
               .swiper-wrapper
                 .swiper-slide
-                  h3.slide-title.s-zero.float-sum-img Mark’s home is equipped with a battery and <br> solar panels in Melbourne, Australia
+                  h3.slide-title.s-zero.float-sum-img Mark’s home is equipped with a battery and solar panels in Melbourne, Australia
                   .slide-overlay
                     .position-relative
                       .position-absolute.list-position
