--- a/src/views/component/zero/block-zero.pug
+++ b/src/views/component/zero/block-zero.pug
@@ -10,16 +10,16 @@
         //-             img(src="/battaries.png" alt="Battaries")
         .container-full.row.mb-0.bg.gray.pt-0.mt-5.pb-5.mb-5
             .content-wrap.content-0
-                .container
+                .container.pt-0.pt-lg-3.my-3.my-lg-4
                     .content-wrap.content-0
-                        .row    
+                        .row   
                             .col-lg-6
                                 .text-box
                                     h4.subtitle-secondary.mt-4.mb-4 Under project EDGE, Mark’s assets can sell services to <br> utilities who manage the grid. <br> In exchange, he gets paid, generating
                                     h3.body-text new revenues from <br> his battery and solar panels
                             .col-lg-6.px-0
                                 img(src="/block-1-house.svg" alt="house")
-        .container
+        .container.pt-0.pt-lg-3
             .content-wrap.content-0                
                 .row.mb-0.col-reversed
                     .col-lg-6
