--- a/src/views/component/zero/block-three.pug
+++ b/src/views/component/zero/block-three.pug
@@ -13,7 +13,7 @@
             .row.mb-0.pt-0
                 .col-lg-6.px-0
                     .d-flex.flex-column.justify-content-center.h-100.mx-4.mx-lg-0
-                        h3.subtitle-upper After EDGE”s trial period
+                        h3.subtitle-upper After EDGE's trial period
                         h4.subtitle-secondary.mt-4 the architecture has the<br> potential to set a standard for<br> the entire Australian market and<br> the world.
                 .col-lg-6.d-flex.justify-content-center.align-items-center.timeline.px-0.gray.pt-5.pb-5
                     img.mx-5(src="/hexagon-two.png" alt="hexagon-two").sized-image
