--- a/src/views/pages/home.pug
+++ b/src/views/pages/home.pug
@@ -42,7 +42,7 @@ block App
                         img(src="/aemo-list.svg" alt="Aemo")
                   img(src="/aemo-individuals.png" alt="Individuals")
                 .swiper-slide
-                  h3.slide-title.s-zero <small>THE DISTRIBUTION GRID OPERATOR</small> Dana works for the <span class="underline dnsp-tip"><span>DNSP</span></span>  a regional distribution grid operator in Australia.
+                  h3.slide-title.s-zero <small>THE DISTRIBUTION NETWORK OPERATOR</small> Dana works for an electric distribution utility in Australia
                   .slide-overlay
                   img(src="/aemo-companies.png" alt="Companies")
                 .swiper-slide
