--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -24,6 +24,7 @@ $font-size-big: 13vw;
 $font-size-heading: 3.1rem;
 $font-size-subheading: 2.625rem;
 $font-size-subheading2: 2.125rem;
+$font-size-subheading3: 1.7rem;
 $font-size-body: 1rem;
 $font-size-small: 1.25rem;
 
