--- a/src/views/component/zero/block-zero.pug
+++ b/src/views/component/zero/block-zero.pug
@@ -15,7 +15,7 @@
                         .row   
                             .col-lg-6
                                 .text-box
-                                    h4.subtitle-secondary.mt-4.mb-4 Under Project EDGE, Mark’s assets can sell services to <br> utilities who manage the grid. <br> In exchange, he gets paid, generating
+                                    h4.subtitle-secondary.mt-4.mb-4 Under Project EDGE, Mark’s assets can sell services to utilities who manage the grid. In exchange, he gets paid, generating
                                     h3.body-text new revenues from <br> his battery and solar panels
                             .col-lg-6.px-0
                                 img(src="/block-1-house.svg" alt="house")
@@ -26,5 +26,5 @@
                         img(src="/hexagon.svg" alt="hexagon")
                     .col-lg-6.mt-0.px-0
                         .text-box.to-right.s-t-center
-                            h4.subtitle-secondary.mb-4.mx-4.mx-lg-0 Through Mark’s participation in Project EDGE, he and other Australians with similar systems are helping to balance a rapidly 
+                            h4.subtitle-secondary-3.mb-4.mx-4.mx-lg-0 Through Mark’s participation in Project EDGE, he and other Australians <br> with similar systems are helping to <br> balance a rapidly 
                             h3.body-text.mb-4.mb-lg-0.mx-4.mx-lg-0 decarbonizing grid in support of a clean energy future
