--- a/src/views/component/zero/block-four.pug
+++ b/src/views/component/zero/block-four.pug
@@ -24,7 +24,7 @@
                     .text-block-5.d-flex.align-items-center.justify-content-center.text-center.mx-3.px-0.mx-lg-5.px-lg-5.flex-column
                         h3.body-text-inverted-2.mb-5 Are you a grid operator?
                         h3.body-text-inverted.mt-0.mt-lg-0.mx-4.mx-lg-4 <small>Do you need a way to coordinate distributed energy resource behavior <br> across the transmission / distribution interface? </small> Learn how you can BUILD a similar <br> solution with the EW tech stack.
-                        a(href='https://www.energyweb.org/contact/')
+                        a(href='https://www.energyweb.org/contact/' target="_parent")
                             .btn-primary.mt-5 Build with us 
                                 img(src="/icon-arrow-down.png" alt="arrow icon")
                 .w-100                
