--- a/src/views/pages/home.pug
+++ b/src/views/pages/home.pug
@@ -39,7 +39,8 @@ block App
                   .slide-overlay
                     .position-relative
                       .position-absolute.list-position
-                        img(src="/aemo-list.svg" alt="Aemo")
+                        a(href="https://energyweb.org")
+                         img(src="/aemo-list2.svg" alt="Aemo")
                   img(src="/aemo-individuals.png" alt="Individuals")
                 .swiper-slide
                   h3.slide-title.s-zero <small>The Distribution Network Operator</small> Dana works for an electric distribution utility in Australia
