--- a/src/views/pages/home.pug
+++ b/src/views/pages/home.pug
@@ -39,7 +39,7 @@ block App
                   .slide-overlay
                     .position-relative
                       .position-absolute.list-position
-                        a(href="https://energyweb.org")
+                        a(href="https://www.energyweb.org/aemo/")
                          img(src="/aemo-list2.svg" alt="Aemo")
                   img(src="/aemo-individuals.png" alt="Individuals")
                 .swiper-slide
