--- a/src/views/component/zero/block-four.pug
+++ b/src/views/component/zero/block-four.pug
@@ -19,7 +19,7 @@
                     .text-box.world
                         h3.subtitle-upper.mx-3.mb-5.mb-lg-0 Reducing the energy required from centralized fossil-fueled power plants.
         .container-full.text-overlay-container
-            .bg-purple
+            .bg-purple.img-fixed
                 .text-overlay-container.d-flex.align-items-center
                     .text-block-5.d-flex.align-items-center.justify-content-center.text-center.mx-3.px-0.mx-lg-5.px-lg-5.flex-column
                         h3.body-text-inverted-2.mb-5 Are you a grid operator?
@@ -27,7 +27,7 @@
                         a(href='https://www.energyweb.org/contact/' target="_parent")
                             .btn-primary.mt-5 Build with us 
                                 img(src="/icon-arrow-down.png" alt="arrow icon")
-                .w-100                
+                .w-100.d-flex.h-100                  
                     img(src="/world-footer-aemo.png", alt="world-footer")      
 
 
