--- a/src/views/component/zero/block-one.pug
+++ b/src/views/component/zero/block-one.pug
@@ -27,4 +27,13 @@
                 .col-lg-6.timeline.px-0
                     img(src="/aemo-eye.png" alt="aemo-el")(class="large-sc").to-right.pb-5
                     img(src="/sm-wider-eye.png" alt="aemo-el")(class="small-sc")
+        .container-full.text-overlay-container
+            .bg-purple.img-fixed
+                .text-overlay-container.d-flex.align-items-center
+                    .text-block-5.d-flex.align-items-center.justify-content-center.text-center.mx-3.px-0.mx-lg-5.px-lg-5.flex-column
+                        h3.body-text-inverted.mt-0.mt-lg-0.mx-4.mx-lg-4 Are you a grid operator and want to learn more? <br> Head to the project microsite that has more <br> specialized information for you.
+                        a(href='https://www.energyweb.org/aemo/' target="_parent")
+                            .btn-primary.mt-5.link-aemo energyweb.org/aemo
+                .w-100.d-flex.h-100                
+                    img(src="/world-footer-aemo.png", alt="world-footer")    
         //- .border-liner
